[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mplfig"
version = "1.0.1"
authors = [
  {name="Paul Virally", email="pvirally@gmail.com"},
]
description = "Save and load matplotlib figures like MATLAB's .fig files!"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib",
]
dependencies = [
    "dill"
]
keywords = [
    "matplotlib",
    "MATLAB",
    "figure",
    "savefig",
]

[project.urls]
"Homepage" = "https://github.com/PaulVirally/mplfig"
"Bug Tracker" = "https://github.com/PaulVirally/mplfig/issues"
